Removing bug with scrollbar

--- a/css/_parts/home.styl
+++ b/css/_parts/home.styl
@@ -28,11 +28,7 @@ $row_background_img_path = $base_url '/assets/img/cartography_background.png'
     white-space: nowrap
 
     &::-webkit-scrollbar
-      background: transparent
-      width: 0
-
-    &::-webkit-scrollbar-thumb
-      background: transparent
+      display: none
 
   .our-philosophy__mobile-leteral-scroll-content
     padding-left: 15px
