--- a/css/_parts/home/speakers.styl
+++ b/css/_parts/home/speakers.styl
@@ -15,16 +15,13 @@
       overflow-y: hidden
       padding-left: 40px
       white-space: nowrap
+      -webkit-overflow-scrolling: touch
 
       img
         width: 100%
 
       &::-webkit-scrollbar
-        background: transparent
-        width: 0
-
-      &::-webkit-scrollbar-thumb
-        background: transparent
+        display: none
 
       .speakers__pictures-card
         border-radius: 8px
